--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -1,7 +1,8 @@
 $theme: (
   themeColor: #ff0a16,
-  primaryDark: #141414,
+  primaryDark: #ffea90,
   accentDark: #ffffff,
   lightGray: #f2f2f2,
-  texts: #333333
+  texts: #333333,
+  backgroundLight: #ffea90
 );
