--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -1,8 +1,9 @@
 $theme: (
-  themeColor: #ff0a16,
+  themeColor: #254646,
   primaryDark: #ffea90,
-  accentDark: #ffffff,
+  accentDark: #404040,
   lightGray: #f2f2f2,
   texts: #333333,
-  backgroundLight: #ffea90
+  backgroundLight: #ffea90,
+  accentLight: #ffea90
 );
