--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -59,8 +59,8 @@
 
     .description {
       font-size: rem(24px);
-      color: #fff;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+      color: $texts;
+      /* text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); */
       margin: 0;
 
       @include media(">=sm") {
