--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,6 +7,8 @@ $primaryDark: map-get($theme, primaryDark) !default;
 $accentDark: map-get($theme, accentDark) !default;
 $lightGray: map-get($theme, lightGray) !default;
 $texts: map-get($theme, texts) !default;
+$backgroundLight: map-get($theme, backgroundLight) !default;
+$accentLight: map-get($theme, accentLight) !default;
 
 // Breakpoints
 $breakpoints: (
