--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -9,6 +9,7 @@
 @import "icons";
 @import "menu";
 @import "hero";
+@import "fixed_hero";
 @import "search";
 @import "elements";
 @import "header";
