--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -34,7 +34,7 @@ aside.sidebar {
   height: 100%;
   top: 0;
   left: rem(-240px);
-  background-color: $accentDark;
+  background-color: $headerBackground;
   z-index: 20;
 
   @include media(">=sm") {
@@ -80,8 +80,8 @@ aside.sidebar {
           color: $primaryDark;
 
           &:hover {
-            color: $accentDark;
-            background: $themeColor;
+            color: $themeColor;
+            background: $accentLight;
           }
         }
       }
