--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -5,5 +5,7 @@ $theme: (
   lightGray: #f2f2f2,
   texts: #333333,
   backgroundLight: #ffea90,
-  accentLight: #ffea90
+  accentLight: #ffea90,
+  headerBackground: #12678f,
+  siteHero: "{{ site.hero }}" 
 );
