--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,6 +9,8 @@ $lightGray: map-get($theme, lightGray) !default;
 $texts: map-get($theme, texts) !default;
 $backgroundLight: map-get($theme, backgroundLight) !default;
 $accentLight: map-get($theme, accentLight) !default;
+$headerBackground: map-get($theme, headerBackground) !default;
+$siteHero: map-get($theme, siteHero) !default;
 
 // Breakpoints
 $breakpoints: (
