--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -1,31 +1,10 @@
 .hero {
   position: relative;
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
   width: 100%;
   height: 100vh;
 
   +#grid {
-    margin-top: rem(-80px);
-  }
-
-  .gradient,
-  .pixels {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-
-  .pixels {
-    opacity: 0.8;
-    background-image: url(../../assets/img/pixels.png);
-  }
-
-  .gradient {
-    background-image: linear-gradient(0deg, rgba(20, 20, 20, 1) 5%, rgba(0, 0, 0, 0) 30%);
+    margin-top: rem(80px);
   }
 
   .content {
@@ -36,36 +15,20 @@
     width: 80%;
     height: 100%;
     padding-left: 10%;
+    font-size: rem(64px);
+    color: $accentLight;
+    filter: none;
+
+  .content::before {
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url('#{$siteHero}');
+    filter: brightness(50%);
+  }
 
     @include media(">=sm") {
       width: 50%;
-    }
-
-    .date {
-      font-size: rem(16px);
-      color: rgba(255, 255, 255, 0.75);
-    }
-
-    .title {
-      font-size: rem(40px);
-      color: #fff;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-      margin: rem(10px) 0;
-
-      @include media(">=sm") {
-        font-size: rem(50px);
-      }
-    }
-
-    .description {
-      font-size: rem(24px);
-      color: $texts;
-      /* text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); */
-      margin: 0;
-
-      @include media(">=sm") {
-        font-size: rem(26px);
-      }
     }
 
     .buttons {
